[tool.poetry]
name = "polar_hrm"
version = "0.0.0"
description = "Polar heart rate monitor SDK python implementation"
authors = ["Stavros Avramidis <stavros9899@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/purpl3F0x/polar_hrm"


classifiers = [
    "Development Status :: 1 - Planning",
    "Framework :: AsyncIO",
    "Topic :: Software Development :: Libraries",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Android",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "License :: OSI Approved :: MIT License",
]

[tool.poetry.dependencies]
python = "^3.9"
bleak = "^0.14.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
